--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pickle
-cvzone
-firebase_admin
-face_recognition
-time
-numpy
-cv2
+cvzone>=1.5.6
+firebase-admin>=6.0.1
+face-recognition>=1.3.0
+numpy>=1.24.1
+opencv-python>=4.7.0.68
